# text-to-sql-agent

./: .env.example  .gitignore  README.md  pyproject.toml
src/agent/: __init__.py  config.py  database.py  main.py
src/agent/application/services/: schema_indexer.py
src/agent/application/use_cases/: generate_sql.py
src/agent/domain/entities/: query_log.py
src/agent/domain/repositories/: __init__.py  query_log_repository.py
src/agent/domain/services/: schema_retriever.py  sql_generator.py
src/agent/infrastructure/database/: connection.py  globals.py  models.py  schema_service.py
src/agent/infrastructure/llm/: langchain_client.py
src/agent/infrastructure/repositories/: __init__.py  sqlalchemy_query_log_repository.py
src/agent/infrastructure/vectorstore/: __init__.py  chroma_client.py  embedding_service.py  schema_retriever.py
src/agent/presentation/api/: __init__.py  dependencies.py  schemas.py
src/agent/presentation/api/routes/: database_routes.py  query_routes.py
src/agent/presentation/web/: __init__.py  routes.py
src/agent/presentation/web/static/: script.js
src/agent/presentation/web/static/js/: api.js  app.js  ui.js  utils.js
src/agent/presentation/web/templates/: index.html  layout.html  table_detail.html
src/agent/presentation/web/templates/components/: chat_area.html  create_table_modal.html  input_bar.html  sidebar.html  table_modal.html
src/agent/presentation/web/templates/components/sidebar/: db_panel.html  examples_panel.html  footer_profile.html  tables_panel.html
src/agent/shared/: exceptions.py
tests/: test_basic.py
